[Swift in WebKit] Fix incorrect quoted imports in WTF https://bugs.webkit.org/show_bug.cgi?id=301554 rdar://163536176

Reviewed by Abrar Rahman Protyasha.

Most WTF files properly import each other using angled brackets, but there are a few that incorrectly don't.
Fix those, since Swift and modules are more strict about correctness.

Also fix the AutodrainedPool.h file by making it be able to be included in any context, and instead just compile
out the contents of the file instead of failing to compile just because the header was included.

* Source/WTF/wtf/AutodrainedPool.h:
* Source/WTF/wtf/RefTrackerMixin.h:
* Source/WTF/wtf/SIMDUTF.cpp:
* Source/WTF/wtf/cocoa/AutodrainedPool.cpp:
* Source/WTF/wtf/cocoa/CrashReporter.cpp:
* Source/WTF/wtf/cocoa/SystemTracingCocoa.cpp:
* Source/WTF/wtf/cocoa/UUIDCocoa.mm:
* Source/WTF/wtf/posix/FileHandlePOSIX.cpp:
* Source/WTF/wtf/posix/MappedFileDataPOSIX.cpp:
* Source/WTF/wtf/text/cocoa/StringImplCocoa.mm:

Canonical link: https://commits.webkit.org/302225@main